--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Please fill here.
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Lemon Delight.Order</title>
+    </head>
+    <body>
+
+
+    </body>
+</html>
