--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         }
     </style>
     <body>
+        <div class = "entirePage">
         <div>
             <h2 id = "top" class = "menu-bar">
                 ______________________________________________________________________________________________________________________________________________________________
@@ -67,12 +68,18 @@
         <p>Note that all the time information on this page was last checked as of when this page was opened. If not <a href = "https://mimicoctopus1.github.io/lemondelight.order/">reload</a>ed, this page may result in false information.</p>
         <meter min = "0" max = "20" high = "15" low = "5" optimum = "0" value = "0" class = "wait-bar"></meter>
         <div class = "message"></div>
+        <h1>
+            Please don't Order by messaging<br>lemondelight@gmail.com<br>
+        </h1>
         
         
+        </div>
         <script>
+            var lemonDelightIsBroken = "false";
             var message = document.getElementsByClassName("message")[0];
             var wait_meter = document.getElementsByClassName("wait-time");
             var waitBar = document.getElementsByClassName("wait-bar")[0];
+            var entirePage = document.getElementsByClassName("entirePage")[0];
             var peopleInLine = 0;
             var subtractedTime = 0;
             var calculateWaitTime = function() {
@@ -94,9 +101,12 @@
             }
             var time1 = window.setInterval(calculateWaitTime, 1000);
             var time2 = window.setInterval(calculateWaitTimeInMin, 60000);
-            var timerUpdateBar = window.setInterval(updateBar, 100)
+            var timerUpdateBar = window.setInterval(updateBar, 100);
             calculateWaitTime();
             calculateWaitTimeInMin();
+            if(lemonDelightIsBroken === "true") {
+                entirePage.innerHTML = "<h1>Sorry. This page is having a problem. It will hopefully be fixed soon.</h1>";
+            }
         </script>
     </body>
 </html>
