--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             sideOpener.addEventListener("click", showSideMenu);
             sideCloser.addEventListener("click", hideSideMenu);
             iframe.innerHTML = "Sorry. This form is not available."
-            iframe.innerHTML = '<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeuarK352AoMaIKSR-c8-CKRa457-swxqwN6dt2P5w5aqHFFg/viewform?embedded=true" width="100%" height="200%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>';
+            iframe.innerHTML = '<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeuarK352AoMaIKSR-c8-CKRa457-swxqwN6dt2P5w5aqHFFg/viewform?embedded=true" width="700" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>';
         </script>
     </body>
 </html>
