--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
             width: 500px;
             height: 100px;
         }
+        
+        #GENERAL-CSSS {}
+        .iframe {
+            background: rgba(255, 255, 0, 0.7);
+        }
     </style>
     <body>
         <div class = "entirePage">
