--- a/index.html
+++ b/index.html
@@ -156,12 +156,11 @@
         <h1>
             Please order by messaging<br>lemondelightstand@gmail.com<br>or by using the the Google Form below. PLEASE DON'T DO BOTH!
         </h1>
-        
-        
+        <a href = "#menu">Click here for more.</a>
         <div id = "form" class = "iframe"></div>
         <div class = "break-lines"></div><!--Break Line-->
         <br>
-        <div class = "menu">
+        <div id = "menu" class = "menu">
         <p class = "scroll-note"> Scroll down inside this box for more.</p>
     <h1 class = "menu-title">Everyday Menu</h1><!--Menu Label-->
         <p>
