--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         
         </div>
         <script>
-            var lemonDelightIsBroken = false;
+            var lemonDelightIsBroken = true;
             var message = document.getElementsByClassName("message")[0];
             var wait_meter = document.getElementsByClassName("wait-time");
             var waitBar = document.getElementsByClassName("wait-bar")[0];
