--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--If the iframe doesn't show and you're here on KA, it's okay. iframes aren't allowed, but I didn't really care because I'm just using KA for Oh Noes, autocomplete, and the quickly loading previews. Speaking of Error Buddy, he kept giving me an error when I used an iframe, so in order for me to keep working without the error, I used-->
+<!--If the iframe doesn't show and you're here on KA, it's okay. iframes aren't allowed, but I didn't really care because I'm just using KA for Oh Noes, autocomplete, and the quickly loading previews, and then I copy everything onto Github (Don't get me wrong KA is awesome, but for security measures, some features are blocked). Speaking of Error Buddy, he kept giving me an error when I used an iframe, so in order for me to keep working without the error, I used-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -509,7 +509,7 @@
         
         </div>
         <script>
-            var lemonDelightIsBroken = true;
+            var lemonDelightIsBroken = false;
             var message = document.getElementsByClassName("message")[0];
             var wait_meter = document.getElementsByClassName("wait-time");
             var waitBar = document.getElementsByClassName("wait-bar")[0];
