--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--If the iframe doesn't show and you're here on KA, it's okay. iframes aren't allowed, but I didn't really care because I'm just using KA for Oh Noes, autocomplete, and the quickly loading previews. Speaking of Error Buddy, he kept giving me an error when I used an iframe, so in order for me to keep working without the error, I used some JS to insert it after the HTML was laid out.-->
 <html>
     <head>
-        <script src="https://www.google.com/recaptcha/enterprise.js?render=6LerwwAoAAAAAKXVFl7t-8fDNIBJPmbveYU4L0sh"></script><!--Not a Bot verification-->
+        <script src="https://www.google.com/recaptcha/enterprise.js?render=6LcrNwEoAAAAADIzi0fgnwtdolDrAAKLa53_7yVk"></script><!--Not A Bot verification-->
         <meta charset="utf-8">
         <title>Lemon Delight.Order</title>
     </head>
