--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 //alert("grecaptcha is ready!");
                 var reCAPTCHADiv = document.querySelectorAll(".recaptcha")[0];
                 grecaptcha.enterprise.render(reCAPTCHADiv, {
-                    'sitekey': "6Lc8vgIoAAAAAIhQPl7OfY8oQ0gDW7R5xzF0eBUZ",
+                    'sitekey': "6LcQRgQoAAAAAAdV7FnVtEfzBk8H85uVkzxyGhor",
                     'action': 'LOGIN',
                     "theme": "light"
                 });
@@ -148,7 +148,6 @@
     </style>
     <body>
         <div class = "entirePage">
-        <div class = "recaptcha"></div>
         <div>
             <h2 id = "top" class = "menu-bar">
                 ______________________________________________________________________________________________________________________________________________________________
@@ -181,6 +180,9 @@
         <p>Note that all the time information on this page was last checked as of when this page was opened. If not <a href = "https://mimicoctopus1.github.io/lemondelight.order/">reload</a>ed, this page may display false information.</p>
         <meter min = "0" max = "20" high = "15" low = "5" optimum = "0" value = "0" class = "wait-bar"></meter>
         <div class = "message"></div>
+        <div class = "break-lines">
+        </div><!--Break Line-->
+        <div class = "recaptcha"></div><!---->
         <div class = "break-lines">
         </div><!--Break Line-->
         <h1>
